IS-189 Metadata fix (#192)